--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "styled-components": "^5.3.6"
   }
 }
