--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,16 @@
     "@mui/material": "^5.11.5",
     "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.2",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "firebase": "^9.16.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6"
   }
