--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
