--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "firebase": "^9.16.0",
+    "mapbox-gl": "^2.12.1",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
