--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/x-data-grid": "^5.17.23",
     "@next/font": "13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
