--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
