--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
