--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@next/font": "13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
+    "country-state-city": "^3.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "firebase": "^9.16.0",
